// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 kDMJeG"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "0 0 0 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "0 0 0 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 222222"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 222222
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "0 0 0 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "0 0 0 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 444444444444444444"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 444444444444444444
      </label>
    </div>
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "width": "15em",
    }
  }
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 kDMJeG"
    height={null}
    id={null}
    overflow={null}
    width={null}
  >
    <div
      style={
        Object {
          "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
        }
      }
    >
      <div
        className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
        id={null}
        label="Tag 1"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 1
        </label>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
        }
      }
    >
      <div
        className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
        id={null}
        label="Tag 222222"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 222222
        </label>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
        }
      }
    >
      <div
        className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
        id={null}
        label="Tag 33333333333"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 33333333333
        </label>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
        }
      }
    >
      <div
        className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
        id={null}
        label="Tag 444444444444444444"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 444444444444444444
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[` 3`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 hqMSnT"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 222222"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 222222
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 444444444444444444"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 444444444444444444
      </label>
    </div>
  </div>
</div>
`;

exports[` 4`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 dSJtgN"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 222222"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 222222
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 444444444444444444"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 444444444444444444
      </label>
    </div>
  </div>
</div>
`;

exports[` 5`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 kDMJeG"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 kAnULo Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_226"
      media=""
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
        id={null}
        onClick={null}
      >
        <div
          style={
            Object {
              "width": "10em",
            }
          }
        >
          Different size in content
        </div>
      </section>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </div>
  </div>
</div>
`;

exports[` 6`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 dMntJL"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 kAnULo Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_227"
      media=""
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
        id={null}
        onClick={null}
      >
        <div
          style={
            Object {
              "width": "10em",
            }
          }
        >
          Different size in content
        </div>
      </section>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </div>
  </div>
</div>
`;

exports[` 7`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 hGpRWo"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 kAnULo Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_228"
      media=""
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
        id={null}
        onClick={null}
      >
        <div
          style={
            Object {
              "width": "10em",
            }
          }
        >
          Different size in content
        </div>
      </section>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </div>
  </div>
</div>
`;
